# banking-bento

./: .gitignore  ARCHITECTURE_EXPLORATION.md  LICENSE  README.md  docker-compose.yml  mod.js  package-lock.json  package.json
apps/api/: .dockerignore  requirements.txt
apps/api (going to deprecate)/app/routes/: plaid.py
apps/api/app/: __init__.py  config.py
apps/api/app/handlers/: alpaca_handler.py  plaid_handler.py
apps/api/app/routes/: plaid.py  trading.py
apps/bot/: pyproject.toml
apps/serverless-backend/: README.md  package.json
apps/serverless-backend/lib/: banking-core-stack.ts
apps/serverless-backend/lib/constructs/: api-gateway.ts  database.ts  webhooks.ts  (+1 more)
apps/serverless-backend/state-machines/: split-transfer.asl.json
apps/web/: package.json
apps/web/app/: globals.css  page.tsx
apps/web/lib/: api-client.ts  formatters.ts
diagrams/: (ideal)-system-architect.md
scripts/: seed-ssm-local.mjs  sync-api-gateway-env.mjs
tmp/done-plans/: 2026-05-03-api-gateway-plaid-sandbox-testing.md  2026-05-05-api-client-modularization.md
tmp/localstack/cache/: license.json  machine.json  server.test.pem.crt  server.test.pem.key
tmp/plan-artifacts/: 2026-04-28-plaid-transfer-rearchitecture-brief.md  2026-04-28-plaid-transfer-rearchitecture-research-dossier.md  2026-05-03-api-gateway-plaid-sandbox-testing-brief.md  2026-05-03-api-gateway-plaid-sandbox-testing-research-dossier.md  2026-05-05-api-client-modularization-brief.md  2026-05-05-api-client-modularization-research-dossier.md
tmp/ready-plans/: 2026-04-28-plaid-transfer-rearchitecture.md
(+88 files in other folders)
