[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9",
    "alpaca-py>=0.8",
    "apscheduler>=3.10",
    "flask>=3.0",
    "langgraph>=0.2",
    "numpy>=1.24",
    "optuna>=3.6",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "torch>=2.2",
]
